Fix clipped background image

--- a/enrolment/static/sass/main-desktop.scss
+++ b/enrolment/static/sass/main-desktop.scss
@@ -1120,6 +1120,7 @@ a.ed-filled-button-primary {
     font-weight: 300;
     line-height: 1.1em;
     margin: 0 0 20px 0;
+    min-height: 40px;
     padding: 10px 0 10px 51px;
   }
 }
